--- a/saude.html
+++ b/saude.html
@@ -22,7 +22,7 @@
     <div class="manu_area">
         <div class="mainmenu menu-wrap wrap">
             <ul id="nav-bottom" class="button_area">
-                <li><a href="/index.html"><img src="/images/BotãoVoltar2.png" alt="Voltar"></a></li>
+                <li><a href="/index.html"><img src="/images/BotãoHome.png" alt="Página Principal"></a></li>
                 <li><a href="/educacao.html"><img src="/images/BotãoEducação.png" alt="Educação"></a></li>
                 <li><a href="/saude.html"><img src="/images/BotãoSaúde.png" alt="Saúde"></a></li>
                 <li><a href="/tecnologia.html"><img src="/images/BotãoTecnologia.png" alt="Tecnologia"></a></li>
