--- a/educacao.html
+++ b/educacao.html
@@ -41,6 +41,25 @@
 
     <p class="maislidas">Matérias mais lidas de Educação: </p>
 
+    <div class="articles-container" id="article7">
+        <a class="article-educacao" href="/paginas/educacao007.html">
+            <figure class="article-image">
+                <img src="/images/mini-banner-educação8.png">
+            </figure>
+            <div class="article-body">
+                <h2 class="article-title">
+                    Obesidade Infantil e a Promoção da Alimentação Saudável nas Escolas: Desafios e Oportunidades
+                </h2>
+                <p class="article-content">
+                    O excesso de peso, identificado através do Índice de Massa Corporal, é um problema de saúde pública de grande relevância, afetando não apenas adultos, mas também crianças e adolescentes. No Brasil, as estatísticas revelam preocupantes índices de sobrepeso e obesidade, o que torna essencial o desenvolvimento de estratégias eficazes para combater essa epidemia. Nas últimas décadas, transformações sociais impactaram significativamente o padrão de saúde e alimentação no Brasil, com um aumento notável no consumo de alimentos ultraprocessados. Essa tendência tem contribuído para o crescimento das doenças crônicas não transmissíveis, incluindo a obesidade >>
+                </p>
+                <footer class="article-info">
+                    <i>Por Marcia DallaCosta. 18/09/2023</i>
+                </footer>
+            </div>
+        </a>
+    </div>
+
     <div class="articles-container" id="article6">
         <a class="article-educacao" href="/paginas/educacao003.html">
             <figure class="article-image">
