--- a/saude.html
+++ b/saude.html
@@ -37,7 +37,26 @@
     
     <p class="maislidas">Matérias mais lidas de Saúde: </p>
 
-    <div class="articles-container" id="article1">
+    <div class="articles-container" id="article7">
+        <a class="article-educacao" href="/paginas/saude007.html">
+            <figure class="article-image">
+                <img src="/images/mini-banner-saúde7.png">
+            </figure>
+            <div class="article-body">
+                <h2 class="article-title">
+                    Vacina Experimental contra o HIV Inicia Testes em Humanos: Uma Nova Esperança na Luta Contra a AIDS
+                </h2>
+                <p class="article-content">
+                    Uma nova esperança na luta contra o vírus da imunodeficiência humana (HIV) surge à medida que a Vir Biotechnology, uma empresa norte-americana de imunologia, anuncia o início dos testes em humanos de uma vacina experimental. A empresa tem como objetivo disponibilizar os resultados iniciais da fase 1 dos ensaios no segundo semestre de 2024. Esta vacina, denominada VIR-1388, é fundamentada na plataforma de vetores do citomegalovírus humano (HCMV) e tem como propósito estimular a produção de células imunológicas conhecidas como células T, que respondem a diferentes proteínas do HIV em comparação com abordagens anteriores >>
+                </p>
+                <footer class="article-info">
+                    <i>Por Sasha Damouni Ellis  22/09/2023</i>
+                </footer>
+            </div>
+        </a>
+    </div>
+
+    <div class="articles-container" id="article6">
         <a class="article-educacao" href="/paginas/saude006.html">
             <figure class="article-image">
                 <img src="/images/saude6-mini-banner.png">
