--- a/tecnologia.html
+++ b/tecnologia.html
@@ -36,6 +36,25 @@
     
 
     <p class="maislidas">Matérias mais lidas de Tecnologia: </p>
+
+    <div class="articles-container" id="article9">
+        <a class="article-educacao" href="/paginas/tecnologia009.html">
+            <figure class="article-image">
+                <img src="/images/mini-bannertechnologia9.png">
+            </figure>
+            <div class="article-body">
+                <h2 class="article-title">
+                    Desvendando o Futuro da Comunicação: Como grandes modelos Corporificada estão transformando o mundo das assistências virtuais
+                </h2>
+                <p class="article-content">
+                    Grandes modelos de linguagem (LLMs) são técnicas avançadas de aprendizado profundo que podem interagir com humanos em tempo real e responder a perguntas sobre uma ampla gama de tópicos. Esses modelos ganharam muita popularidade após o lançamento do ChatGPT, um modelo criado pela OpenAI que surpreendeu muitos usuários por sua capacidade de gerar respostas semelhantes às humanas para suas perguntas. >>
+                </p>
+                <footer class="article-info">
+                    <i>Por Ingrid Fadelli  30/09/2023</i>
+                </footer>
+            </div>
+        </a>
+    </div>
     <div class="articles-container" id="article8">
         <a class="article-educacao" href="/paginas/tecnologia008.html">
             <figure class="article-image">
