--- a/tecnologia.html
+++ b/tecnologia.html
@@ -37,6 +37,25 @@
 
     <p class="maislidas">Matérias mais lidas de Tecnologia: </p>
 
+
+    <div class="articles-container" id="article10">
+        <a class="article-educacao" href="/paginas/tecnologia0010.html">
+            <figure class="article-image">
+                <img src="/images/mini-bannertechnologia10.png">
+            </figure>
+            <div class="article-body">
+                <h2 class="article-title">
+                    As principais novidades do recém lançado Android 14 incluem:
+                </h2>
+                <p class="article-content">
+                    Personalização Avançada: O sistema oferece maior controle sobre a aparência, permitindo personalizar a tela de bloqueio com diferentes fontes, cores e widgets. Além disso, expande as opções de personalização da tela inicial e aplicativos. >>
+                </p>
+                <footer class="article-info">
+                    <i>Por Guilherme Haas  05/10/2023</i>
+                </footer>
+            </div>
+        </a>
+    </div>
     <div class="articles-container" id="article9">
         <a class="article-educacao" href="/paginas/tecnologia009.html">
             <figure class="article-image">
