--- a/educacao.html
+++ b/educacao.html
@@ -41,6 +41,25 @@
 
     <p class="maislidas">Matérias mais lidas de Educação: </p>
 
+    <div class="articles-container" id="article8">
+        <a class="article-educacao" href="/paginas/educacao008.html">
+            <figure class="article-image">
+                <img src="/images/mini-banner-educação9.png">
+            </figure>
+            <div class="article-body">
+                <h2 class="article-title">
+                    As Melhores Ferramentas de IA para Potencializar a Sua Pesquisa Acadêmica
+                </h2>
+                <p class="article-content">
+                    A relação entre a academia e a inteligência artificial (IA) tem se tornado cada vez mais estreita, e a IA está se estabelecendo como uma ferramenta poderosa para impulsionar a pesquisa acadêmica. Neste artigo, exploramos como a IA, em particular o ChatGPT, está moldando o futuro da pesquisa acadêmica e como os acadêmicos podem utilizá-la de maneira eficaz >>
+                </p>
+                <footer class="article-info">
+                    <i>Por PhD. Mushtaq Bilal 15/10/2023</i>
+                </footer>
+            </div>
+        </a>
+    </div>
+
     <div class="articles-container" id="article7">
         <a class="article-educacao" href="/paginas/educacao007.html">
             <figure class="article-image">
